<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_text">

    <fragment
        android:id="@+id/nav_text"
        android:name="com.sujina.jinaml.ui.textRecognition.TextFragment"
        android:label="@string/menu_text"
        tools:layout="@layout/fragment_text" />

    <fragment
        android:id="@+id/nav_image"
        android:name="com.sujina.jinaml.ui.imageRecognition.ImageFragment"
        android:label="@string/menu_image"
        tools:layout="@layout/fragment_image" />

    <fragment
        android:id="@+id/nav_voice"
        android:name="com.sujina.jinaml.ui.voiceRecognition.VoiceFragment"
        android:label="@string/menu_voice"
        tools:layout="@layout/fragment_voice" />
    <fragment
        android:id="@+id/nav_face"
        android:name="com.sujina.jinaml.ui.faceRecognition.FaceFragment"
        android:label="@string/menu_face"
        tools:layout="@layout/fragment_face_regonition" />
    <fragment
        android:id="@+id/nav_translation"
        android:name="com.sujina.jinaml.ui.translation.TranslationFragment"
        android:label="@string/menu_translate"
        tools:layout="@layout/fragment_translation" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sujina.jinaml.ui.settings.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings" />
</navigation>